--- a/maib_admin/admin_panel/templates/base.html
+++ b/maib_admin/admin_panel/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
@@ -24,19 +24,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     {% if user.is_staff %}
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/quest">Викторины</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/poster">Афиши</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/geo">Локации</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/quest">Викторины</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/poster">Афиши</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/geo">Локации</a>
+                        </li>
                     {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="/poster">Афиши</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="/poster">Афиши</a>
+                        </li>
                     {% endif %}
                 </ul>
                 <div class="dropdown">
