--- a/maib_admin/admin_panel/templates/poster.html
+++ b/maib_admin/admin_panel/templates/poster.html
@@ -118,6 +118,7 @@
                                     {% csrf_token %}
 
                                     <input value="{{poster.name}}" name="name" type="text" class="form-control mb-2" placeholder="Название мероприятия">
+                                    <p>Возрастное ограничение: {{poster.ageLim}}</p>
                                     <select name="ageLim" class="form-select mb-3">
                                         <option value="0+">0+</option>
                                         <option value="16+">16+</option>
@@ -146,8 +147,20 @@
                     <div class="card w-75 mb-3">
                         <div class="card-body">
                             <div class="poster__item-title d-flex align-items-center justify-content-between pb-5">
+                                <div class="d-flex align-items-center">
+                                     
+                                    {% if poster.ageLim == '0+' %}
+                                    <span class="h-25 badge text-bg-primary"> {{poster.ageLim}} </span>
+                                    {% elif poster.ageLim == '16+' %}
+                                    <span class="h-25 badge text-bg-warning"> {{poster.ageLim}} </span>
+                                    {% elif poster.ageLim == '18+' %}
+                                    <span class="h-25 badge text-bg-danger"> {{poster.ageLim}} </span>
+                                    {% endif %}
+                                    <h5>{{poster.name}}</h5>
+                                </div>
+
                                 <img src="../static/img/poster__item-icon.svg" alt="">
-                                <h5>{{poster.name}}</h6>
+                               
                             </div>
                             <div class="poster__item-content">
                                 <div class="poster__item-info d-flex align-items-center justify-content-between">
@@ -249,6 +262,7 @@
 
                                         <input name="name" value="{{poster.name}}" type="text" class="form-control mb-2" placeholder="Название мероприятия">
                                         <select name="ageLim" class="form-select mb-3">
+                                            <option value="{{poster.ageLim}}">{{poster.ageLim}} - текущий</option>
                                             <option value="0+">0+</option>
                                             <option value="16+">16+</option>
                                             <option value="18+">18+</option>
@@ -257,7 +271,7 @@
                                             placeholder="Описание мероприятия">{{poster.desc}}</textarea>
                                         <input name="addinfo" value="{{poster.addinfo}}" class="form-control mb-2" type="text" placeholder="Доп. информация">
                                         <input name="addres" value="{{poster.addres}}" class="form-control mb-2" type="text" placeholder="Адрес">
-                                        <input name="date" value="{{poster.date}}" class="form-control mb-2" type="date" placeholder="Дата">
+                                        <input name="date" value="{{poster.date | date:'Y-m-d' }}" class="form-control mb-2" type="date" placeholder="Дата">
                                         <div class="modal-footer">
                                             <button type="button" class="btn btn-danger"
                                                 data-bs-dismiss="modal">Закрыть</button>
@@ -274,8 +288,17 @@
                             <div
                                 class="w-100 poster__item-title d-flex align-items-center justify-content-between pr-5">
 
-                                <div class="w-75">
-                                    <h5>{{ poster.name }}</h5>
+                                <div class="w-75 d-flex align-items-center">
+
+                                        {% if poster.ageLim == '0+' %}
+                                        <span class="h-25 badge text-bg-primary"> {{poster.ageLim}} </span>
+                                        {% elif poster.ageLim == '16+' %}
+                                        <span class="h-25 badge text-bg-warning"> {{poster.ageLim}} </span>
+                                        {% elif poster.ageLim == '18+' %}
+                                        <span class="h-25 badge text-bg-danger"> {{poster.ageLim}} </span>
+                                        {% endif %}
+
+                                        <h5>{{poster.name}}</h5>
                                 </div>
                                 <img src="../static/img/poster__item-icon.svg" alt="">
                             </div>
